--- a/app/src/main/res/layout/fragment_status_qurban.xml
+++ b/app/src/main/res/layout/fragment_status_qurban.xml
@@ -152,6 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextBody.Italic"
+            android:visibility="gone"
             android:textSize="12sp"
             android:layout_marginTop="12dp"
             android:text="Mohon melakukan pembayaran sebelum "
@@ -164,6 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextBody.Italic"
+            android:visibility="gone"
             android:textSize="12sp"
             android:textColor="@color/red"
             android:text="06:10"
