--- a/app/src/main/res/layout/item_dialog_bottom_sheet_payment.xml
+++ b/app/src/main/res/layout/item_dialog_bottom_sheet_payment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_rounded_8dp"
+    android:backgroundTint="@color/background_container"
     android:padding="24dp"
     android:orientation="vertical">
 
@@ -128,6 +129,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_confirm"
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
