--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,16 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/statusQurbanFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.dicoding.qurbanin.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_searchFragment"
-            app:destination="@id/searchFragment" />
         <action
             android:id="@+id/action_homeFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
@@ -25,6 +22,12 @@
         <argument
             android:name="idEvent"
             app:argType="string" />
+        <action
+            android:id="@+id/action_detailFragment_to_homeContainerFragment"
+            app:destination="@id/homeContainerFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/homeContainerFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -73,7 +76,11 @@
         tools:layout="@layout/fragment_list_qurban" >
         <action
             android:id="@+id/action_listQurbanFragment_to_statusQurbanFragment"
-            app:destination="@id/statusQurbanFragment" />
+            app:destination="@id/statusQurbanFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -82,16 +89,30 @@
         tools:layout="@layout/fragment_profile" >
         <action
             android:id="@+id/action_profileFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="true"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_profileFragment_to_statusQurbanFragment"
-            app:destination="@id/statusQurbanFragment" />
+            app:destination="@id/statusQurbanFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/statusQurbanFragment"
         android:name="com.dicoding.qurbanin.ui.detail.StatusQurbanFragment"
         android:label="fragment_status_qurban"
-        tools:layout="@layout/fragment_status_qurban" />
+        tools:layout="@layout/fragment_status_qurban" >
+        <argument android:name="idRegistered"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/homeContainerFragment"
         android:name="com.dicoding.qurbanin.ui.home.HomeContainerFragment"
@@ -100,5 +121,14 @@
         <action
             android:id="@+id/action_homeContainerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_homeContainerFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_homeContainerFragment_to_statusQurbanFragment"
+            app:destination="@id/statusQurbanFragment" />
+        <action
+            android:id="@+id/action_homeContainerFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
