--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_bottom_nav">#FF1C1B1F</color>
+    <color name="background_container">#FF1C1B1F</color>
 </resources>
